--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Actadmin - The ACTCMS Laravel Admin</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
-    <link href="https://host9999.github.io/actadmin/css/animate.css" rel="stylesheet">
-    <link href="https://host9999.github.io/actadmin/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://host9999.github.io/actadmin/css/style.css" rel="stylesheet">    
-    <link href="https://host9999.github.io/actadmin/css/jquery-ui.min.css" rel="stylesheet">
+    <link href="https://host9999.github.io/css/animate.css" rel="stylesheet">
+    <link href="https://host9999.github.io/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://host9999.github.io/css/style.css" rel="stylesheet">    
+    <link href="https://host9999.github.io/css/jquery-ui.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <!--[if IE 9]>
       <link href="css/ie9.css" rel="stylesheet">
