website commit on Github

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Actadmin - The ACTCMS Laravel Admin</title>
+    <title>Actadmin - The Missing Laravel Admin</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link href="https://host9999.github.io/css/animate.css" rel="stylesheet">
     <link href="https://host9999.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -257,15 +257,15 @@
       </div>
     </div>
     
-    <script src="https://host9999.github.io/actadmin/js/jquery.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/bootstrap.min.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/headhesive.min.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/jquery-ui.min.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/scrollme.min.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/matchHeight.min.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/flickity.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/bootstrap-dropdown-on-hover.js"></script>
-    <script src="https://host9999.github.io/actadmin/js/custom.js"></script>
+    <script src="https://host9999.github.io/js/jquery.js"></script>
+    <script src="https://host9999.github.io/js/bootstrap.min.js"></script>
+    <script src="https://host9999.github.io/js/headhesive.min.js"></script>
+    <script src="https://host9999.github.io/js/jquery-ui.min.js"></script>
+    <script src="https://host9999.github.io/js/scrollme.min.js"></script>
+    <script src="https://host9999.github.io/js/matchHeight.min.js"></script>
+    <script src="https://host9999.github.io/js/flickity.js"></script>
+    <script src="https://host9999.github.io/js/bootstrap-dropdown-on-hover.js"></script>
+    <script src="https://host9999.github.io/js/custom.js"></script>
     <script>
       $(document).on('click', '#menu-primary a.scroll', function(event){
           event.preventDefault();
